--- a/WeiboTest/WeiboCell.xib
+++ b/WeiboTest/WeiboCell.xib
@@ -47,7 +47,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{10, 35}, {300, 50}}</string>
 								<reference key="NSSuperview" ref="417680875"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="363978096"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -81,7 +80,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{10, 10}, {122, 21}}</string>
 								<reference key="NSSuperview" ref="417680875"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="964187459"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -113,7 +111,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{155, 10}, {155, 21}}</string>
 								<reference key="NSSuperview" ref="417680875"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="251421320"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -145,7 +142,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{10, 175}, {300, 21}}</string>
 								<reference key="NSSuperview" ref="417680875"/>
-								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -169,7 +165,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{10, 90}, {87, 80}}</string>
 								<reference key="NSSuperview" ref="417680875"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="357546549"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -180,7 +175,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrameSize">{320, 3}</string>
 								<reference key="NSSuperview" ref="417680875"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="846691468"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -193,7 +187,6 @@
 						</array>
 						<string key="NSFrameSize">{321, 230}</string>
 						<reference key="NSSuperview" ref="195702855"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="908473748"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -209,7 +202,6 @@
 				</array>
 				<string key="NSFrameSize">{321, 231}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="417680875"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -226,20 +218,22 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{10, 6}, {50, 50}}</string>
 						<reference key="NSSuperview" ref="992757196"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="46286794"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<int key="IBUIContentMode">2</int>
 						<int key="IBUITag">1</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<object class="NSCustomResource" key="IBUIImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">headphoto.png</string>
+						</object>
 					</object>
 					<object class="IBUILabel" id="46286794">
 						<reference key="NSNextResponder" ref="992757196"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{64, 10}, {161, 21}}</string>
 						<reference key="NSSuperview" ref="992757196"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="391483261"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -248,7 +242,7 @@
 						<int key="IBUITag">2</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string key="IBUIText">Label</string>
+						<string key="IBUIText">你的昵称</string>
 						<object class="NSColor" key="IBUITextColor" id="16171478">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MSAxIDEAA</bytes>
@@ -273,7 +267,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{64, 35}, {161, 21}}</string>
 						<reference key="NSSuperview" ref="992757196"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="9001806"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -282,7 +275,7 @@
 						<int key="IBUITag">3</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string key="IBUIText">Label</string>
+						<string key="IBUIText">所在城市</string>
 						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MC43NQA</bytes>
@@ -301,9 +294,8 @@
 					<object class="IBUIView" id="930066247">
 						<reference key="NSNextResponder" ref="992757196"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{0, 60}, {90, 40}}</string>
+						<string key="NSFrame">{{0, 60}, {100, 40}}</string>
 						<reference key="NSSuperview" ref="992757196"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="286624217"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="989206504">
@@ -316,9 +308,8 @@
 					<object class="IBUILabel" id="286624217">
 						<reference key="NSNextResponder" ref="992757196"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{10, 58}, {42, 21}}</string>
+						<string key="NSFrame">{{12, 60}, {42, 21}}</string>
 						<reference key="NSSuperview" ref="992757196"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="289594856"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -327,7 +318,7 @@
 						<int key="IBUITag">4</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string key="IBUIText">109</string>
+						<string key="IBUIText">0</string>
 						<reference key="IBUITextColor" ref="16171478"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
@@ -341,9 +332,8 @@
 					<object class="IBUILabel" id="289594856">
 						<reference key="NSNextResponder" ref="992757196"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{10, 77}, {42, 21}}</string>
+						<string key="NSFrame">{{12, 79}, {42, 21}}</string>
 						<reference key="NSSuperview" ref="992757196"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="978310999"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -367,9 +357,8 @@
 					<object class="IBUIView" id="978310999">
 						<reference key="NSNextResponder" ref="992757196"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{86, 60}, {90, 40}}</string>
+						<string key="NSFrame">{{100, 60}, {100, 40}}</string>
 						<reference key="NSSuperview" ref="992757196"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="987400880"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="989206504"/>
@@ -381,7 +370,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{118, 60}, {42, 21}}</string>
 						<reference key="NSSuperview" ref="992757196"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="599390858"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -390,7 +378,7 @@
 						<int key="IBUITag">5</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string key="IBUIText">109</string>
+						<string key="IBUIText">0</string>
 						<reference key="IBUITextColor" ref="16171478"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
@@ -406,7 +394,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{118, 79}, {42, 21}}</string>
 						<reference key="NSSuperview" ref="992757196"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="372938851"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -430,9 +417,8 @@
 					<object class="IBUIView" id="372938851">
 						<reference key="NSNextResponder" ref="992757196"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{173, 60}, {96, 40}}</string>
+						<string key="NSFrame">{{200, 60}, {100, 40}}</string>
 						<reference key="NSSuperview" ref="992757196"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="441857569"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="989206504"/>
@@ -444,7 +430,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{217, 60}, {42, 21}}</string>
 						<reference key="NSSuperview" ref="992757196"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="597201267"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -453,7 +438,7 @@
 						<int key="IBUITag">6</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string key="IBUIText">109</string>
+						<string key="IBUIText">0</string>
 						<reference key="IBUITextColor" ref="16171478"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
@@ -469,7 +454,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{217, 79}, {42, 21}}</string>
 						<reference key="NSSuperview" ref="992757196"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -492,12 +476,12 @@
 					<object class="IBUIButton" id="9001806">
 						<reference key="NSNextResponder" ref="992757196"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{233, 10}, {36, 31}}</string>
+						<string key="NSFrame">{{233, 10}, {35, 35}}</string>
 						<reference key="NSSuperview" ref="992757196"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="930066247"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
+						<int key="IBUITag">10</int>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
@@ -527,7 +511,6 @@
 				</array>
 				<string key="NSFrameSize">{300, 100}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="1061162524"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="989206504"/>
@@ -651,21 +634,16 @@
 							<reference ref="599390858"/>
 							<reference ref="9001806"/>
 							<reference ref="930066247"/>
-							<reference ref="978310999"/>
-							<reference ref="372938851"/>
 							<reference ref="391483261"/>
 							<reference ref="46286794"/>
+							<reference ref="372938851"/>
+							<reference ref="978310999"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">49</int>
 						<reference key="object" ref="1061162524"/>
-						<reference key="parent" ref="992757196"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">50</int>
-						<reference key="object" ref="46286794"/>
 						<reference key="parent" ref="992757196"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -694,11 +672,6 @@
 						<reference key="parent" ref="992757196"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">56</int>
-						<reference key="object" ref="441857569"/>
-						<reference key="parent" ref="992757196"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">57</int>
 						<reference key="object" ref="597201267"/>
 						<reference key="parent" ref="992757196"/>
@@ -721,12 +694,23 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">61</int>
 						<reference key="object" ref="372938851"/>
+						<array class="NSMutableArray" key="children"/>
 						<reference key="parent" ref="992757196"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">62</int>
 						<reference key="object" ref="908473748"/>
 						<reference key="parent" ref="195702855"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">50</int>
+						<reference key="object" ref="46286794"/>
+						<reference key="parent" ref="992757196"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">56</int>
+						<reference key="object" ref="441857569"/>
+						<reference key="parent" ref="992757196"/>
 					</object>
 				</array>
 			</object>
@@ -761,56 +745,17 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">62</int>
+			<int key="maxID">64</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">WeiboCell</string>
-					<string key="superclassName">UITableViewCell</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="author">UILabel</string>
-						<string key="content">UILabel</string>
-						<string key="img">UIImageView</string>
-						<string key="source">UILabel</string>
-						<string key="time">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="author">
-							<string key="name">author</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="content">
-							<string key="name">content</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="img">
-							<string key="name">img</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="source">
-							<string key="name">source</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="time">
-							<string key="name">time</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/WeiboCell.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="edit.png">{18, 19}</string>
+			<string key="edit.png">{35, 35}</string>
 			<string key="fenge.png">{320, 3}</string>
+			<string key="headphoto.png">{50, 50}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">2083</string>
 	</data>
